// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks spinner as error 1`] = `
"[?25l[1G[33m⠋[39m #error[?25l[1G[33m⠙[39m #error[?25l[1G[33m⠹[39m #error[2K[1G[31m✖[39m #error
[?25h"
`;

exports[`marks spinner as error with mark 1`] = `
"[?25l[1G[33m⠋[39m #error[?25l[1G[33m⠙[39m #error[?25l[1G[33m⠹[39m #error[2K[1G[31m✖[39m #error
[?25h[?25l[1G[33m⠋[39m #error[?25l[1G[33m⠙[39m #error[?25l[1G[33m⠹[39m #error[2K[1G[32m✔[39m Error

[?25h[?25l[1G[33m⠋[39m #error[?25l[1G[33m⠙[39m #error[?25l[1G[33m⠹[39m #error[2K[1G! #error
[?25h"
`;

exports[`marks spinner as error with message 1`] = `
"[?25l[1G[33m⠋[39m #error[?25l[1G[33m⠙[39m #error[?25l[1G[33m⠹[39m #error[2K[1G[31m✖[39m #error
[?25h[?25l[1G[33m⠋[39m #error[?25l[1G[33m⠙[39m #error[?25l[1G[33m⠹[39m #error[2K[1G[32m✔[39m Error

[?25h"
`;
